--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.GoMental"
         tools:targetApi="31">
         <activity
+            android:name=".BookAppointmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BookAppoinmentActivity"
+            android:exported="false" />
+        <activity
             android:name=".DoctorDetailsActivity"
             android:exported="false" />
         <activity
