--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:theme="@style/Theme.GoMental"
         tools:targetApi="31">
         <activity
+            android:name=".ReportsDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ReportsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LabTestActivity"
+            android:exported="false" />
+        <activity
             android:name=".DoctorDetailsActivity"
             android:exported="false" />
         <activity
