--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         <activity
             android:name=".ReportsActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".ReportsDetailsActivity"
+            android:exported="false" />
+
         <activity
             android:name=".BookAppointmentActivity"
             android:exported="false" />
