--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,20 @@
         android:theme="@style/Theme.GoMental"
         tools:targetApi="31">
         <activity
+            android:name=".BuyMedicineDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BuyMedicineActivity"
+            android:exported="false" />
+        <activity
             android:name=".ReportsActivity"
             android:exported="false" />
-
         <activity
             android:name=".ReportsDetailsActivity"
             android:exported="false" />
-
         <activity
             android:name=".BookAppointmentActivity"
             android:exported="false" />
-
         <activity
             android:name=".DoctorDetailsActivity"
             android:exported="false" />
