--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,14 @@
         android:theme="@style/Theme.GoMental"
         tools:targetApi="31">
         <activity
+            android:name=".CartReportActivity"
+            android:exported="false" />
+        <activity
             android:name=".ReportsActivity"
             android:exported="false" />
         <activity
             android:name=".BookAppointmentActivity"
             android:exported="false" />
-
         <activity
             android:name=".DoctorDetailsActivity"
             android:exported="false" />
