--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoMental"
         tools:targetApi="31">
+        <activity
+            android:name=".ProfessionalPanelActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminPanelActivity"
+            android:exported="false" />
         <activity
             android:name=".CallTextActivity"
             android:exported="false" />
